correction du scss du modal pour lui appliquer une version mobile plus ergonomique

--- a/resto/src/assets/scss/modal.scss
+++ b/resto/src/assets/scss/modal.scss
@@ -8,95 +8,6 @@
   font-size: 16px;
   font-weight: bold;
 }
-
-.main-container,
-.modal-window,
-.modal-container {
-  transition: 0.5s;
-}
-
-.modal-window {
-  position: fixed;
-  top: 50%;
-  right: -300px;
-  translate: 50% -50%;
-  background: #ffffff;
-  color: #000000;
-  padding: 48px 40px;
-  width: 300px;
-  height: 118px;
-  border-radius: 12px;
-}
-
-.modal-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: grid;
-  place-items: center;
-  opacity: 0;
-  visibility: hidden;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-body.open-modal .modal-container {
-  visibility: visible;
-  opacity: 1;
-}
-
-body.open-modal .card-container {
-  animation: card-container-in 1s both;
-}
-
-body.open-modal > .main-container {
-  scale: 0.75;
-}
-
-body.open-modal .modal-window {
-  animation: modal-window-in 1s both;
-}
-
-h2 {
-  margin: 0 0 8px;
-  font-weight: 900;
-  font-size: 21px;
-}
-
-p {
-  margin: 0;
-}
-
-@keyframes modal-window-in {
-  0%,
-  50% {
-    width: 118px;
-    border-radius: 50%;
-  }
-  55%,
-  100% {
-    right: 50%;
-  }
-  60% {
-    width: 300px;
-    border-radius: 12px;
-  }
-  75% {
-    translate: 50% -50%;
-  }
-}
-
-@keyframes card-container-in {
-  0%,
-  75% {
-    opacity: 0;
-  }
-  85%,
-  100% {
-    opacity: 1;
-  }
-}
 .modal {
   position: fixed;
   top: 0;
@@ -159,5 +70,18 @@ p {
     &:hover {
       background-color: #d32f2f;
     }
+  }
+}
+.modal {
+  @media (min-width:320px) and (max-width: 768px) {
+      align-items: flex-end;
+      width: 100%;
+      z-index: 9999;
+  }
+}
+.modal-box {
+  @media (min-width:320px) and (max-width: 768px) {
+      width: 100%;
+      height: 30%;
   }
 }
